added list_controller.go
